--- a/index.html
+++ b/index.html
@@ -13,15 +13,16 @@
                 <nav id="menu">
                     <ul>
                         <li>Página inicial</li>
-                        <li>iPhone</li>
-                        <li>Apple Pay</li>
-                        <li>Multimídia</li>
+                        <li>Dermatolgia</li>
+                        <li>Cosmiatria</li>
+                        <li>Cirurgias</li>
+                        <li>Laser</li>
                         <li>Fale conosco</li>
                        </ul>
                 </nav>
                 <hgroup>
-                    <h1>A revolução já chegou!</h1>
-                    <h2>Tudo sobre o iPhone 6, iPhone 6 Plus e Apple Watch </h2>
+                    <h1>Clínica de Dematologia Dra Sandra Azevedo</h1>
+                    <h2>Tudo sobre para doenças de Pele e Rejuvenescimento </h2>
                 </hgroup>
             </header>
 
