- inclusao das primeiras artes

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="pt-br">
     <head>
         <meta charset="UTF-8"/>
-        <title>*** Novidades Apple *** </title>
+        <title>Dra Sandra Azevedo</title>
 
         <link rel="stylesheet" type="text/css" href="estilo_projeto.css"/>
 
@@ -18,9 +18,10 @@
                         <li>Cirurgias</li>
                         <li>Laser</li>
                         <li>Fale conosco</li>
-                       </ul>
+                    </ul>
                 </nav>
                 <hgroup>
+                    <img id="icone" src="imagens/sa_logo_espaco_estetico.png">
                     <h1>Clínica de Dematologia Dra Sandra Azevedo</h1>
                     <h2>Tudo sobre para doenças de Pele e Rejuvenescimento </h2>
                 </hgroup>
@@ -40,7 +41,7 @@
                     inteligente chamado Apple Watch também foi finalmente revelado. Confira agora mesmo tudo o que existe nestes dispositivos.</p>
 
                 <figure class="figura-legenda">
-                    <img src="iphones_watch.png">
+                    <img src="imagens/sa_superior_left_inside.png">
                     <figcaption>
                         <h4>iPhone 6, iPhone 6S e Apple Watch:</h4>
                         <p>Novos dispositivos da Apple.</p>
