- ajuste de background e cores fundo - inclusao de icone

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <hgroup>
                     <img id="icone" src="imagens/sa_logo_espaco_estetico.png">
                     <h1>Clínica de Dematologia Dra Sandra Azevedo</h1>
-                    <h2>Tudo sobre para doenças de Pele e Rejuvenescimento </h2>
+                    <h2>Tudo sobre doenças de Pele e Rejuvenescimento </h2>
                 </hgroup>
             </header>
 
