- Inclusao de todas as paginas - faltar acertar detlhes de tudo...

--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
             <header id="cabecalho">
                 <nav id="menu">
                     <ul>
-                        <li>Página inicial</li>
-                        <li>Dermatolgia</li>
-                        <li>Cosmiatria</li>
-                        <li>Cirurgias</li>
-                        <li>Laser</li>
-                        <li>Fale conosco</li>
+                        <a href="index.html"><li>Página inicial</li></a>
+                        <a href="dermatologia.html"><li>Dermatolgia</li></a>
+                        <a href="cosmiatria.html"><li>Cosmiatria</li></a>
+                        <a href="cirurgias.html"><li>Cirurgias</li></a>
+                        <a href="laser.html"><li>Laser</li></a>
+                        <a href="fale.html"><li>Fale conosco</li></a>
                     </ul>
                 </nav>
                 <hgroup>
@@ -30,37 +30,73 @@
 
             <section id="corpo">
 
-                <h3>Apresentação</h3>
+                <h3>
 
-                <p>Em um evento especial realizado no dia 9 de setembro, a Apple mostrou para a imprensa e para os consumidores os detalhes de seus novos 
-                    smartphones: <span style="font-weight: bold;">iPhone 6</span>  e <span style="font-weight: bold;">iPhone 6 Plus</span>. Estes aparelhos surgem 
-                    para substituir os iPhone 5S no topo da linha da fabricante, sendo que uma série de melhorias foi realizada para atrair os consumidores.</p>
+                    <p><a href="novidades.html#sa_pink_title"><span><font size="6">Novidade</font></span></a><a href="novidades.html#sa_pink_title"><span><font size="6">s</font></span></a></p>
 
-                <p>Mudanças nos tamanhos da tela, hardware mais potente e alguns recursos inéditos foram apresentados com o novo smartphone. Como você já deve saber, 
-                    foram dois aparelhos anunciados — um com dimensões mais parecidas com as encontradas 
-                    em <a href="http://pt.wikipedia.org/wiki/Phablet" target="_blank"><span style="font-style: italic;">phablets</a></span>. Além disso, um relógio 
-                    inteligente chamado Apple Watch também foi finalmente revelado. Confira agora mesmo tudo o que existe nestes dispositivos.</p>
+                </h3>
+                <p><span><font size="6">Verão 2016</font></span></p>
+                <p><span><strong><font color="#AF3D54" size="5">VelaShape</font></strong></span><font color="#993366" size="+1">&#8482;</font> 
+                    <span class="novo">(novo)</span></p>
+                <p><br />
+                        <span>Tratamento de Celulites, Gordura Localizada e Flacidez</span></p>
+                <p>1º equipamento aprovado pelo FDA (EUA), 
+                        para tratamento da celulite,redução de medidas e flacidez.</p>
+                <p></p>
+                <p>Beleza, saúde e bem-estar. Este é 
+                        o objetivo da maior parte das pessoas que recorrem aos procedimentos estéticos. 
+                        E muitas são as opções de tratamentos disponíveis no mercado. Mas, em geral, 
+                        os métodos restringem-se a tratar um problema por vez ao longo de várias sessões, 
+                        o que faz com que o paciente demore a ver os tão esperados resultados....</p>
+
+
 
                 <figure class="figura-legenda">
-                    <img src="imagens/sa_superior_left_inside.png">
+                    <img src="imagens/sa_velashape.png">
                     <figcaption>
-                        <h4>iPhone 6, iPhone 6S e Apple Watch:</h4>
-                        <p>Novos dispositivos da Apple.</p>
+                        <h4>Marque a sua consulta hoje mesmo...</h4>
+                        <p>Basta ligar para uns dos nossos telefones</p>
                     </figcaption>
                 </figure>
             </section>
 
             <aside id="lateral">
 
-                <h3>Preço e Disponibilidade</h3>
+                <h3>Dicas da Dra.</h3>
+                <span>por Dra. Sandra Azevedo</span>
+                <ul>
 
-                <p>Os novos iPhones 6 e iPhones 6 Plus estão disponíveis nos Estados Unidos desde o dia 19 de setembro e devem chegar ao Brasil até o final do ano. 
-                    Por lá, os preços se iniciam nos US$ 199 para versões com contrato com operadoras e US$ 649 para aparelhos desbloqueados — nos dois casos estamos
-                    falando do iPhone 6 de 16 GB. O iPhone 6 Plus de mesma capacidade fica por US$ 299 e US$ 749 nos mesmos quesitos.</p>
+                    <li>Atividade física reduz um pouco da <a id="sa_texto_hover" href="../celulite.html#apDiv1" target="_parent">celulite</a> e melhora a circulação sanguínea</li>
+                    <li>Drenagem Linfática melhora a circulação local e drena as toxinas diminuindo o edema local</li>
+                    <li>Endermologia – aparelho de drenagem linfática, de sucção e massagem loca</li>
+                    <li>Melhorar a absorção intestinal – com aumento da ingestão  de fibras e nutrientes</li>
+                    <li>Antioxidantes - melhora o metabolismo</li>
+                    <li>Intradermoterapia ou Mesoterapia</li>
+                    <li>Carboxiterapia - terapia com CO2</li>
+                    <li>Accent - Flacidez associada ou não com a <a id="sa_texto_hover" href="../celulite.html#apDiv1" target="_parent">celulite</a></li>
+                    <li>Ultra Contour – Ultra Som Focado</li>
 
-                <p>Quanto aos Apple Watches, ainda não existe uma data oficial para o lançamento dos gadgets, mas a Apple promete que eles chegarão às lojas no 
-                    começo de 2015. Os modelos mais básicos serão vendidos a partir de US$ 349, mas há rumores de que uma versão de ouro 18 quilates possa ultrapassar 
-                    os US$ 1,2 mil.</p>
+                </ul>
+
+                    <h3>Acne</h3>
+                <p>saiba qual é o seu estágio<br />
+                    <br />
+                    <img src="imagens/sa_acne.png" alt="acne" border="0" /> </head> </p>
+                <h3><font color="#993366">Peeling 
+                        Ultrassônico</font><span class="novo">(novo)</span></h3>
+                <p><span>saiba o que é ...</span></p>
+                <p><br />
+                    <img src="imagens/sa_peeling_quanttic_peq.png" width="185" height="100" border="0" /></a></p>
+                <h3><font color="#993366">Máscara 
+                        Quântica</font> <span class="novo">(novo)</span></h3>
+                <p><img src="imagens/sa_atomo.png" width="100" height="93" border="0" /></p>
+                <p><span>saiba o que é ...</span></p>
+                <p><br />
+                    </p>
+                <p>&nbsp;</p>
+                <p>&nbsp;</p>
+
+
             </aside>
 
             <footer id="rodape">
