--- a/cosmiatria.html
+++ b/cosmiatria.html
@@ -32,7 +32,7 @@
 
                 <p>Uma das técnicas estéticas é o preenchimento facial. São substâncias que 
                     podem ser injetadas na pele para eliminar sulcos superficiais e profundos, 
-                    linhas, rugas, imperfeições cutâneas, cicatrizes de <a id="sa_texto_hover" href="acne.html#sa_texto" target="_self">acne</a>, 
+                    linhas, rugas, imperfeições cutâneas, cicatrizes de <a id="sa_texto_hover" href="http://pt.wikipedia.org/wiki/Acne" target="_blank">acne</a>, 
                     aumentar o contorno de lábios, modelar a face e elevar a sobrancelha. </p>
 
                 <h2>A Calvície</h2>
@@ -45,8 +45,7 @@
                 <br />
                 <p>A ação do hormônio chamado DHT começa nas células da região superior frontal da cabeça, avançando para o restante do couro cabeludo com o passar do tempo.</p>
                 <br />
-                <p>Na imagem a baixo, o processo do enfraquecimento e da <a id="sa_texto_hover" href="queda.html#sa_texto" target="_self">queda 
-                        de cabelo.</a></p>
+                <p>Na imagem a baixo, o processo do enfraquecimento e da queda de cabelo.</p>
 
                 <figure class="figura-legenda">
                     <img src="imagens/sa_queda_processo.png">
@@ -63,7 +62,11 @@
 
      <h2>Queda de Cabelo</h2>
     <span>por que os homens perdem cabelo<br /> e ficam carecas?</span> <br />
-    <p>A perda de cabelos, cientificamente chamada de alopecia, pode ter várias origens. O médico é a pessoa mais indicada para identificar o que está causando a queda. Geralmente nos homens, a causa é de origem hormonal e genética. Observe os membros de sua família, e se algum deles for careca, existe a possibilidade de você apresentar o mesmo problema. Mas existe tratamento. <a class="mais" href="http://pt.wikipedia.org/wiki/Calv%C3%ADcie" target="_blank">Saiba mais ...</a></p>
+    <p>A perda de cabelos, cientificamente chamada de alopecia, pode ter várias origens. 
+        O médico é a pessoa mais indicada para identificar o que está causando a queda. 
+        Geralmente nos homens, a causa é de origem hormonal e genética. Observe os membros 
+        de sua família, e se algum deles for careca, existe a possibilidade de você apresentar 
+        o mesmo problema. Mas existe tratamento. <a class="mais" href="http://pt.wikipedia.org/wiki/Calv%C3%ADcie" target="_blank">Saiba mais ...</a></p>
   
     
   <p>&nbsp;</p>
@@ -77,7 +80,7 @@
             <p>O tratamento é realizado com a aplicação do LED no couro cabeludo por 20 
                 a 30 minutos, duas vezes por semana. Ha um crescimento de novos fios e o respectivo 
                 aumento na espessura.</p>
-            <p>&nbsp;</p><p><a class="fale" href="contatos.html#apDiv1" target="_self">Fale com a Dra. Sandra Azevedo</a></p>
+            <p>&nbsp;</p><p><a class="fale" href="fale.html#apDiv1" target="_self">Fale com a Dra. Sandra Azevedo</a></p>
 
 
   
