--- a/index.html
+++ b/index.html
@@ -32,27 +32,34 @@
 
                 <h3>
 
-                    <p><a href="novidades.html#sa_pink_title"><span><font size="6">Novidade</font></span></a><a href="novidades.html#sa_pink_title"><span><font size="6">s</font></span></a></p>
+                    <p><span><font size="6">Novidade</font></span><span><font size="6">s</font></span></p>
 
                 </h3>
                 <p><span><font size="6">Verão 2016</font></span></p>
                 <p><span><strong><font color="#AF3D54" size="5">VelaShape</font></strong></span><font color="#993366" size="+1">&#8482;</font> 
                     <span class="novo">(novo)</span></p>
                 <p><br />
-                        <span>Tratamento de Celulites, Gordura Localizada e Flacidez</span></p>
+                    <span>Tratamento de Celulites, Gordura Localizada e Flacidez</span></p>
                 <p>1º equipamento aprovado pelo FDA (EUA), 
-                        para tratamento da celulite,redução de medidas e flacidez.</p>
+                    para tratamento da celulite,redução de medidas e flacidez.</p>
                 <p></p>
                 <p>Beleza, saúde e bem-estar. Este é 
-                        o objetivo da maior parte das pessoas que recorrem aos procedimentos estéticos. 
-                        E muitas são as opções de tratamentos disponíveis no mercado. Mas, em geral, 
-                        os métodos restringem-se a tratar um problema por vez ao longo de várias sessões, 
-                        o que faz com que o paciente demore a ver os tão esperados resultados....</p>
+                    o objetivo da maior parte das pessoas que recorrem aos procedimentos estéticos. 
+                    E muitas são as opções de tratamentos disponíveis no mercado. Mas, em geral, 
+                    os métodos restringem-se a tratar um problema por vez ao longo de várias sessões, 
+                    o que faz com que o paciente demore a ver os tão esperados resultados....</p>
 
+                <div id="tvSandra">
+                    <br />
+                    <p>Video Dra Sandra Azevedo</p>
 
-
+                    <video id="filme" controls="controls">
+                        <source src="imagens/palestra.mp4" type="video/mp4"/>
+                    </video>
+                </div>
+                
                 <figure class="figura-legenda">
-                    <img src="imagens/sa_velashape.png">
+
                     <figcaption>
                         <h4>Marque a sua consulta hoje mesmo...</h4>
                         <p>Basta ligar para uns dos nossos telefones</p>
@@ -66,33 +73,33 @@
                 <span>por Dra. Sandra Azevedo</span>
                 <ul>
 
-                    <li>Atividade física reduz um pouco da <a id="sa_texto_hover" href="../celulite.html#apDiv1" target="_parent">celulite</a> e melhora a circulação sanguínea</li>
+                    <li>Atividade física reduz um pouco da <a id="sa_texto_hover" href="http://pt.wikipedia.org/wiki/Celulite" target="_blank">celulite</a> e melhora a circulação sanguínea</li>
                     <li>Drenagem Linfática melhora a circulação local e drena as toxinas diminuindo o edema local</li>
                     <li>Endermologia – aparelho de drenagem linfática, de sucção e massagem loca</li>
                     <li>Melhorar a absorção intestinal – com aumento da ingestão  de fibras e nutrientes</li>
                     <li>Antioxidantes - melhora o metabolismo</li>
                     <li>Intradermoterapia ou Mesoterapia</li>
                     <li>Carboxiterapia - terapia com CO2</li>
-                    <li>Accent - Flacidez associada ou não com a <a id="sa_texto_hover" href="../celulite.html#apDiv1" target="_parent">celulite</a></li>
+                    <li>Accent - Flacidez associada ou não com a <a id="sa_texto_hover" href="http://pt.wikipedia.org/wiki/Celulite" target="_blank">celulite</a></li>
                     <li>Ultra Contour – Ultra Som Focado</li>
 
                 </ul>
 
-                    <h3>Acne</h3>
+                <h3>Acne</h3>
                 <p>saiba qual é o seu estágio<br />
                     <br />
                     <img src="imagens/sa_acne.png" alt="acne" border="0" /> </head> </p>
                 <h3><font color="#993366">Peeling 
-                        Ultrassônico</font><span class="novo">(novo)</span></h3>
+                    Ultrassônico</font><span class="novo">(novo)</span></h3>
                 <p><span>saiba o que é ...</span></p>
                 <p><br />
                     <img src="imagens/sa_peeling_quanttic_peq.png" width="185" height="100" border="0" /></a></p>
                 <h3><font color="#993366">Máscara 
-                        Quântica</font> <span class="novo">(novo)</span></h3>
+                    Quântica</font> <span class="novo">(novo)</span></h3>
                 <p><img src="imagens/sa_atomo.png" width="100" height="93" border="0" /></p>
                 <p><span>saiba o que é ...</span></p>
                 <p><br />
-                    </p>
+                </p>
                 <p>&nbsp;</p>
                 <p>&nbsp;</p>
 
