- ultimo ajuste. tirei o comit do form

--- a/fale.html
+++ b/fale.html
@@ -33,8 +33,10 @@
                 <div id="apDiv1">
                     <h2>Entre em contato</h2>
                     <span>com a Dra. Sandra Azevedo</span> <br /> 
-                    <form name="form1" method="POST" action="--WEBBOT-SELF--.html">   
-                        <!--webbot bot="SaveResults" U-File="E:\_Maraujo\Pandera - documentos\Sandra\_Web Site\Site Sandrazevedo\Clinica Dra SA - Contatos Pacientes WebSite.csv" S-Format="TEXT/CSV" S-Label-Fields="TRUE" B-Reverse-Chronology="FALSE" S-Email-Format="TEXT/PRE" S-Email-Address="clinica@sandrazevedo.com.br" B-Email-Label-Fields="TRUE" S-Date-Format="%d-%b-%y" S-Time-Format="%H:%M" S-Builtin-Fields="Date Time" --><input type="hidden" name="tipo" id="tipo" value="Contato"><table width="200px">
+     <!--               <form name="form1" method="POST" action="WEBBOTSELF.html">   -->
+                        <!--webbot bot="SaveResults" U-File="E:\_Maraujo\Pandera - documentos\Sandra\_Web Site\Site Sandrazevedo\Clinica Dra SA - Contatos Pacientes WebSite.csv" S-Format="TEXT/CSV" S-Label-Fields="TRUE" B-Reverse-Chronology="FALSE" S-Email-Format="TEXT/PRE" S-Email-Address="clinica@sandrazevedo.com.br" B-Email-Label-Fields="TRUE" S-Date-Format="%d-%b-%y" S-Time-Format="%H:%M" S-Builtin-Fields="Date Time" -->
+
+                        <input type="hidden" name="tipo" id="tipo" value="Contato"><table width="200px">
                             <tr><td width="25%"><p>Nome:
                                         <label for="textfield"></label></p></td><td width="75%">  
                                     <input type="text" name="nome" id="nome" class="form_itens"  width="100%" size="20" ></td></tr>
